# Texas

./: .gitignore  QUICKSTART.md  README.md  app.py  client.py  poker_game.py  pyproject.toml  rules.md  server.py  start_client.sh  start_server.sh
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
src/: __init__.py
src/application/services/: __init__.py  game_service.py
src/core/: __init__.py  config.py  dependencies.py
src/domain/: __init__.py
src/domain/enums/: __init__.py
src/domain/models/: __init__.py  card.py  deck.py  hand_value.py  player.py  poker_table.py  pot.py
src/domain/rules/: __init__.py  betting_rules.py
src/domain/services/: __init__.py  hand_evaluator.py
src/infrastructure/communication/: __init__.py  connection_manager.py
src/infrastructure/storage/: __init__.py  room_storage.py
static/css/: style.css
static/js/: game.js
templates/: base.html  game.html  index.html  lobby.html
