[project]
name = "texas"
version = "0.1.0"
description = "在线德州扑克游戏"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-socks>=2.7.2",
    "rich>=14.2.0",
    "websockets>=15.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
]
